BugFix: setting the navigator buttons to the top of the sidebar instead of the bottom, since the object list for images with 45+ labels was overlapping the buttons.

--- a/annotationTools/css/object_list.css
+++ b/annotationTools/css/object_list.css
@@ -11,7 +11,7 @@
 
 .labelme_navigator_buttons {
     position:absolute;
-    bottom:70px;
+    top:70px;
     right:5px;
     min-width:180px;
     height:auto;
@@ -43,7 +43,7 @@
 
 .object_list {
     position:absolute;
-    top:70px;
+    top:200px;
     right:5px;
     min-width:180px;
     height:auto;
